--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
     <title>Principal</title>
 </head>
 <body>
-    <h1>Principal</h1>
     <h1><strong>Guía Definitiva: Brave New World</strong></h1>
     <h2><Strong>Secciones Disponibles</Strong></h2>
-    <a href="html/ejercicio1.html">Captain America: Brave New World</a>
+    <a href="html/ejercicio1.html">Reseña Completa</a>
     <br><br>
-    <a href="html/ejercicio2.html">El Legado del Nuevo Capitán América</a>
+    <a href="html/ejercicio2.html">Historia de Sam Wilson</a>
     <br><br>
-    <a href="html/ejercicio3.html">La Magia Detrás de Brave New World</a>
+    <a href="html/ejercicio3.html">Detrás de Cámaras</a>
     <h3><strong>Actualiaciones</strong></h3>
     <h4><strong>Contenido actualizado regularmente</strong></h4>
-    <p>Última revisión: <em>21 de Febrero 2025</em></p>
+    <p>Última revisión: <em>Febrero 2025</em></p>
 </body>
 </html>
