--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a href="html/ejercicio2.html">Historia de Sam Wilson</a>
     <br><br>
     <a href="html/ejercicio3.html">Detrás de Cámaras</a>
-    <h3><strong>Actualiaciones</strong></h3>
+    <h3><strong>Actualizaciones</strong></h3>
     <h4><strong>Contenido actualizado regularmente</strong></h4>
     <p>Última revisión: <em>Febrero 2025</em></p>
 </body>
